feat: add custom prompt template to Asking Module

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # AWS Deployment environment
 AWS_REGION=ap-southeast-1
+# Leave empty to use your AWS profile
 AWS_ACCESS_KEY_ID=your_access_key_here
 AWS_SECRET_ACCESS_KEY=your_secret_key_here
 
@@ -18,7 +19,7 @@ SERVER_PORT=8080
 DEBUG=True
 
 # Security Settings
-SECRET_KEY=aibox-production-secret-key-2024
+SECRET_KEY=aibox-production-secret-key-2025
 TOKEN_EXPIRATION=3600
 SSL_ENABLED=False
 
