--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ CORS_ORIGINS=*
 CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
 CORS_HEADERS=*
 
-# API Provider Settings
+# LLM Provider Settings
 # Bedrock 
 BEDROCK_REGION=us-west-2
 # Gemini
