--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "my-aibox"
 version = "2.0.0"
 description = "MyAIBOX(AI百宝箱) - A comprehensive Gen-AI application suite built with FastAPI and Gradio"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 
 dependencies = [
     # Fundamental
@@ -13,11 +13,9 @@ dependencies = [
     "boto3>=1.28.0",
     "google-genai>=1.7.0",
     "openai>=1.0.0",
-    
     # Strands Agents
     "strands-agents",
     "strands-agents-tools>=0.1.7",
-    
     # Utilities
     "uvicorn[standard]>=0.23.0",
     "python-dotenv>=1.0.0",
@@ -25,7 +23,8 @@ dependencies = [
     "cachetools>=5.3.0",
     "aiohttp>=3.8.5",
     "wikipedia>=1.4.0",
-    "googlesearch-python>=1.2.3",
+    "duckduckgo-search>=8.1.1",
+    "ddgs>=9.6.0",
 ]
 
 [tool.uv]
