feat: add AWS Bedrock AgentCore Runtime support
- Add AgentCore entry point (agentcore_app.py) and client (AgentCoreClient)
- Route Assistant module to AgentCore remotely when USE_AGENTCORE=true, fall back to local AgentProvider when false
- Add deploy/ directory with deployment scripts for both AgentCore and full-stack (EC2/K8s)
- Update README with AgentCore deployment instructions and project structure
- Add bedrock-agentcore, strands-agents dependencies

--- a/.env.example
+++ b/.env.example
@@ -29,9 +29,15 @@ CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
 CORS_HEADERS=*
 
 # LLM Provider Settings
-# Bedrock 
+# Bedrock
 BEDROCK_REGION=us-west-2
 # Gemini
 GEMINI_SECRET_ID=gemini_api_key
 # OpenAI
 OPENAI_SECRET_ID=openai_api_key
+
+# AgentCore Runtime (optional)
+# Set USE_AGENTCORE=true to route Assistant module to remote AgentCore Runtime
+# instead of running the agent locally
+USE_AGENTCORE=false
+AGENTCORE_RUNTIME_ARN=arn:aws:bedrock-agentcore:ap-southeast-1:YOUR_ACCOUNT_ID:runtime/YOUR_RUNTIME_ID
