--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,9 @@
 [project]
 name = "my-aibox"
-version = "2.2.0"
+version = "3.0.0"
 description = "MyAIBOX(AI百宝箱) - A comprehensive Gen-AI application suite built with FastAPI and Gradio"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "strands-agents>=1.20.0",
-]
-
-[tool.setuptools.packages.find]
-include = ["core*", "genai*", "webui*", "common*", "utils*"]
-exclude = ["tests*", "logs*", "tmp*", "assets*"]
-
 dependencies = [
     # Fundamental
     "fastapi>=0.100.0",
@@ -21,7 +13,7 @@ dependencies = [
     "google-genai>=1.7.0",
     "openai>=1.0.0",
     # Strands Agents
-    "strands-agents",
+    "strands-agents>=1.20.0",
     "strands-agents-tools>=0.1.7",
     # AgentCore Runtime
     "bedrock-agentcore>=1.1.0",
@@ -34,7 +26,12 @@ dependencies = [
     "wikipedia>=1.4.0",
     "duckduckgo-search>=8.1.1",
     "ddgs>=9.6.0",
+    "ag-ui-protocol>=0.1.13",
 ]
+
+[tool.setuptools.packages.find]
+include = ["core*", "genai*", "webui*", "common*", "utils*"]
+exclude = ["tests*", "logs*", "tmp*", "assets*"]
 
 [tool.uv]
 # uv specific configurations can be added here
