feat(cli): add build and check commands, fix lint issues
- Add `my-aibox build` to build frontend from CLI
- Add `my-aibox check` to run ruff lint
- Add ruff as dev dependency
- Extract SPAStaticFiles to common/spa.py to fix E402 imports in app.py
- Fix bare except (E722) in asking.py and agents/provider.py
- Remove unused variables (F841) in bedrock_converse.py and mcp_server_manager.py

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+*.egg-info/
 build/
-.eggs/
-develop-eggs/
 dist/
 node_modules
 assets/generated/*
